Display round results on screen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="main.js"></script>
+    <h1 id="title">Jan Ken Po</h1>
+
+    <div class="selectors">
+        <button id="rock" class="btn">Rock</button>
+        <button id="paper" class="btn">Paper</button>
+        <button id="scissors" class="btn">Scissors</button>
+    </div>
+
+    <main id="main">
+        <div id="description"></div>
+        <div class="score">
+            <div class="scores grid">
+                <div class="label">
+                    <p>Player Score</p>
+                </div>
+                <div class="playerScore"></div>
+                <div class="label">
+                    <p>Computer Score</p>
+                </div>
+                <div class="computerScore"></div>
+        </div>
+    </main>
+
+    <!-- <script src="main.js"></script> -->
+    <script src="app.js"></script>
 </body>
 </html>
