--- a/index.html
+++ b/index.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 id="title">Jan Ken Po</h1>
 
     <div class="selectors">
-        <button id="rock" class="btn">Rock</button>
-        <button id="paper" class="btn">Paper</button>
-        <button id="scissors" class="btn">Scissors</button>
+      <button id="rock" class="btn">Rock</button>
+      <button id="paper" class="btn">Paper</button>
+      <button id="scissors" class="btn">Scissors</button>
     </div>
 
     <main id="main">
-        <div id="description"></div>
-        <div class="score">
-            <div class="scores grid">
-                <div class="label">
-                    <p>Player Score</p>
-                </div>
-                <div class="playerScore"></div>
-                <div class="label">
-                    <p>Computer Score</p>
-                </div>
-                <div class="computerScore"></div>
+      <div id="description"></div>
+      <div class="score">
+        <div class="scores grid">
+          <div id="playerScore"></div>
+          <div id="computerScore"></div>
         </div>
+      </div>
     </main>
 
-    <!-- <script src="main.js"></script> -->
-    <script src="app.js"></script>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
